<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Movie Match</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="todo">TO DO</string>
    <string name="find_me_movies">Find Me Movies!</string>
    <string name="title_activity_movie_list">ERROR!!!</string>
    <string name="title_activity_movie_profile">ERROR!!!</string>
    <string name="error">ERROR!!!</string>
    <string name="metacritic">Metacritic</string>
    <string name="rotten">Rotten\nTomatoes</string>
    <string name="length">Length:</string>
    <string name="rating">MPAA Rating:</string>
    <string name="my_rating">My Rating:</string>
    <string name="wishlist">Wish List</string>
    <string name="actor_hint">Enter the name of an actor you like</string>
    <string name="director_hint">Enter the name of a director you like</string>
    <string name="genre_hint">Select a genre you like</string>
    <string name="purchase">Purchase</string>
    <string name="watch_trailer">Watch Trailer</string>
    <string name="actors">Actors:</string>
    <string name="directors">Directors:</string>
    <string name="genres">Genres:</string>
    <string name="edit">Edit</string>
    <string name="add">Add</string>
    <string name="actor_add_dialog">Add an actor</string>
    <string name="director_add_dialog">Add a director</string>
    <string name="edit_genre_title">Select or deselect genres</string>
    <string name="edit_mpaa_title">Select or deselect desired MPAA ratings</string>
    <string name="edit_platform_title">Select or deselect desired MPAA ratings</string>
    <string name="mpaas">MPAA ratings:</string>
    <string name="platforms">Platforms:</string>
    <string name="menu_clear_preferences">Clear Preferences</string>
    <string name="delete_actor_title">Delete Actor</string>
    <string name="delete_actor_message">By long-clicking this Actor, you have selected to delete them.  Are you sure?</string>
    <string name="delete_director_title">Delete Director</string>
    <string name="delete_director_message">By long-clicking this Director, you have selected to delete them.  Are you sure?</string>
    <string name="delete_preferences_title">Clear Preferences</string>
    <string name="delete_preferences_message">Are you sure that you would like to clear all of your preferences?  This cannot be undone.</string>
    <string name="menu_load_preferences">Load Preferences</string>
    <string name="menu_save_preferences">Save Preferences</string>
    <string name="menu_create_preferences">Create Account</string>
    <string name="menu_merge_preferences">Merge Preferences</string>
    <string name="purchase_google_play">Google Play</string>
    <string name="purchase_amazon">Amazon</string>
    <string name="user_merge_message">Warning: You are selecting to merge your preferences with another account.  This cannot be undone.</string>
    <string name="user_merge_hint">Enter the user name of the account to merge</string>
    <string name="user_merge_dialog">Merge your preferences with a friend!</string>
    <string name="save_preferences_title">Save Preferences to Cloud</string>
    <string name="save_preferences_message">Warning: You are selecting to save your preferences to the cloud.  This will overwrite any previously saved preferences there.</string>
    <string name="load_preferences_title">load Preferences from Cloud</string>
    <string name="load_preferences_message">Warning: You are selecting to load your preferences from the cloud.  This will overwrite your locally-saved preferences.</string>
    <string name="login">Login</string>
    <string name="cancel">Cancel</string>
    <string name="username_hint">Username</string>
    <string name="password_hint">Password</string>
    <string name="email_hint">Email</string>
    <string name="success">Success</string>
    <string name="okay">Okay</string>
    <string name="signup">Signup</string>
    <string name="logout">Log Out</string>
    <string name="logged_out_status">You are currently not logged in.</string>
    <string name="loading">Loading…</string>

    <!-- ImageView Content Descriptions -->
    <string name="cd_movie_poster">The poster of the movie.</string>
    <string name="cd_rt_rating">The icon for the RottenTomatoes Critics Approval Rating</string>
    <string name="title_activity_trailer">TrailerActivity</string>
    <string name="title_activity_preferences">Preferences</string>
    <string name="title_activity_movie_wish_list">MovieWishListActivity</string>
    <string name="login_fail_message">Login Failed</string>
    <string name="login_success_message">Login Successful</string>
    <string name="login_invalid_message">Invalid Username or Password</string>
    <string name="signup_fail_message">Signup Failed</string>
    <string name="signup_success_message">Your account has been registered</string>
    <string name="signup_invalid_message">The current username already exists</string>
    <string name="logout_success_message">You have been logged out.</string>

</resources>