<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="edu.rosehulman.moviematch.PreferencesActivity" >

    <item
        android:id="@+id/clear_preferences_item"
        android:showAsAction="never"
        android:title="@string/menu_clear_preferences"/>
    <item
        android:id="@+id/save_preferences_item"
        android:showAsAction="never"
        android:title="@string/menu_save_preferences"/>
    <item
        android:id="@+id/load_preferences_item"
        android:showAsAction="never"
        android:title="@string/menu_load_preferences"/>
    <item
        android:id="@+id/merge_preferences_item"
        android:showAsAction="never"
        android:title="@string/menu_merge_preferences"/>
    <item
        android:id="@+id/create_preferences_item"
        android:showAsAction="never"
        android:title="@string/menu_create_preferences"/>

</menu>