<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scrollView1"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp" >

        <TextView
            android:id="@+id/movie_title_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:text="@string/loading"
            android:textSize="25sp" />

        <ImageView
            android:id="@+id/moviePortrait"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/movie_title_view"
            android:layout_centerHorizontal="true"
            android:contentDescription="@string/cd_movie_poster"
            android:src="@drawable/ic_launcher" />

        <TextView
            android:id="@+id/posterCaptionTitleView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/moviePortrait"
            android:layout_centerHorizontal="true"
            android:paddingTop="3dp"
            android:textSize="15sp"
            android:text="@string/loading"
            android:textStyle="italic" />

        <LinearLayout
            android:id="@+id/rottenTomatoes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:paddingTop="5dp"
            android:layout_below="@id/posterCaptionTitleView"
            android:orientation="horizontal" >

            <ImageView
                android:id="@+id/rottenRating"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:contentDescription="@string/cd_rt_rating"
                android:src="@drawable/ic_launcher" />

            <TextView
                android:id="@+id/rottenScore"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/loading"
                android:paddingLeft="5sp"
                android:textSize="30sp" />
        </LinearLayout>

        <TextView
            android:id="@+id/description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@id/rottenTomatoes"
            android:paddingTop="5dp"
            android:textSize="17sp"
            android:text="@string/loading" />

        <TextView
            android:id="@+id/lengthLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@id/description"
            android:paddingTop="5dp"
            android:textSize="17sp"
            android:text="@string/length" />

        <TextView
            android:id="@+id/lengthTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/description"
            android:layout_toRightOf="@id/lengthLabel"
            android:paddingTop="5dp"
            android:textSize="17sp"
            android:text="@string/loading" />

        <TextView
            android:id="@+id/mpaaLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@id/lengthLabel"
            android:paddingTop="5dp"
            android:textSize="17sp"
            android:text="@string/rating" />

        <TextView
            android:id="@+id/mpaaTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/lengthLabel"
            android:layout_toRightOf="@id/mpaaLabel"
            android:paddingTop="5dp"
            android:textSize="17sp"
            android:text="@string/loading" />

        <LinearLayout
            android:id="@+id/distributionButtons"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/mpaaTextView"
            android:layout_centerHorizontal="true"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:orientation="vertical" >

            <Button
                android:id="@+id/purchase_google_play_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/google_play_store_48"
                android:text="@string/purchase_google_play" />

            <Button
                android:id="@+id/purchase_amazon_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/purchase_amazon" />

            <Button
                android:id="@+id/watch_trailer_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/watch_trailer" />
        </LinearLayout>

        <Button
            android:id="@+id/wishListButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/distributionButtons"
            android:layout_centerHorizontal="true"
            android:text="@string/loading" />
    </RelativeLayout>

</ScrollView>