<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="edu.rosehulman.moviematch.PreferencesActivity" >

    <ScrollView
        android:id="@+id/mood_scrollView"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/actor_pref_header"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/actors"
                    android:textSize="28sp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/addActorButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/add" />
            </LinearLayout>

            <edu.rosehulman.moviematch.NonScrollListView
                android:id="@+id/actor_mood_list_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/director_pref_header"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/directors"
                    android:textSize="28sp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/addDirectorButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/add" />
            </LinearLayout>

            <edu.rosehulman.moviematch.NonScrollListView
                android:id="@+id/director_mood_list_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/genre_pref_header"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/genres"
                    android:textSize="28sp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/editGenresButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/edit" />
            </LinearLayout>

            <edu.rosehulman.moviematch.NonScrollListView
                android:id="@+id/genre_mood_list_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/mpaa_pref_header"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/mpaas"
                    android:textSize="28sp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/editMPAAsButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/edit" />
            </LinearLayout>

            <edu.rosehulman.moviematch.NonScrollListView
                android:id="@+id/mpaa_mood_list_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/platform_pref_header"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/platforms"
                    android:textSize="28sp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/editPlatformsButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/edit" />
            </LinearLayout>

            <edu.rosehulman.moviematch.NonScrollListView
                android:id="@+id/platform_mood_list_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>